# dyonisios

./: generate_dataset.py  train.py
cxx/: CMakeLists.txt  main.cpp
